This file documents the revision history for Perl extension Catalyst.

5.00  XXX XXX XX XX:00:00 2005
        - whole new core for private action inheritance
        - problems with mod_perl2 fixed
        - added Test::Pod support

4.34  Wed Mar 23 07:00:00 2005
        - added some messages to Makefile.PL
        - added Catalyst::Engine::Test
        - added Catalyst::Engine::CGI::NPH
        - simplified Catalyst::Log to be easier to implement/subclass
        - added cgi.pl
        - updated Catalyst::Log to use Catalyst::Engine::Test
        - updated helper scripts
          IMPORTANT: this will be the last time you'll have to regenerate
          the script directory. We promise!

4.33  Wed Mar 23 01:00:00 2005
        - documented the log() accessor method in Catalyst (Andrew Ford)
        - added optional arguments to Catalyst::Log methods (Andrew Ford)
        - removed cgi-server.pl
        - added fcgi.pl and Catalyst::Engine::FCGI
        - fixed an undef durng make test (Dan Sully)
        - new path test (Christian Hansen)
          IMPORTANT: you have to regenerate the script directory again

4.32  Tue Mar 22 02:10:00 2005
        - made a damn typo *AAAAAAAAAAAAAAHHHH!!!*

4.31  Tue Mar 22 02:00:00 2005
        - fixed inheritance (Christian Hansen)
        - previous release was borked!
          fixed that, but you have to regenerate the scripts again :(

4.30  Mon Mar 21 23:00:00 2005
        - more documentation (Andrew Ford)
        - added connection informations (Christian Hansen)
        - HTTP::Request support in Catalyst::Test (Christian Hansen)
        - moved cgi.pl to nph-cgi.pl
        - added Catalyst::Engine::Server (Christian Hansen)
        - removed Catalyst::Test::server
        - updated helper scripts
          IMPORTANT: note that you have to regenerate script/server.pl,
          script/cgi-server.pl and script/cgi.pl (now nph-cgi.pl)

4.28  Sat Mar 19 22:00:00 2005
        - fixed isa tree (Christian Hansen)