@@ -90,6 +90,8 @@ sub config {
 
 sub process { 1 }
 
+=back
+
 =head1 SEE ALSO
 
 L<Catalyst>.
